Fix category links for GitHub Pages subdirectory

--- a/layouts/tools/single.html
+++ b/layouts/tools/single.html
@@ -9,7 +9,8 @@
   <li>
     Category:
     {{ with index .Params.categories 0 }}
-      <a href="{{ "/categories/" | relURL }}{{ . }}/">
+      <a href="{{ "categories/" | relURL }}{{ . }}/">
+
         {{ humanize . }}
       </a>
     {{ end }}
